color picker fixes after angular upgrade (#351)
* fix for cursor disappearing on gray background SB-706

* Fixed color picker being too small after angular upgrade

--- a/src/WebFrontEnd/ClientApp/src/app/shared/components/drawingboard/drawingboard.component.scss
+++ b/src/WebFrontEnd/ClientApp/src/app/shared/components/drawingboard/drawingboard.component.scss
@@ -263,7 +263,7 @@ input[type=range] {
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen {
      ::ng-deep.mat-bottom-sheet-container {
         width: 100vw !important;
     }
